superbitty/tests/ui/BitFieldCompatible/with_payload.stderr
error: cannot have payload with `BitFieldCompatible`
 --> $DIR/with_payload.rs:5:6
  |
5 |     A(()),
  |      ^^^^

error: cannot have payload with `BitFieldCompatible`
 --> $DIR/with_payload.rs:7:7
  |
7 |     C { value: i32 },
  |       ^^^^^^^^^^^^^^
